# Social-Network---C

./: CMakeLists.txt  README.md  main.cpp
AbstractDataType(TAD)/: List.h  OrderedMultitude.h
Domain/: Chat.cpp  Chat.h  Event.cpp  Event.h  User.cpp  User.h
Service/: Network.cpp  Network.h
UserInterface/: UserInterface.cpp  UserInterface.h
